syntax = "proto3";

package proto;

option java_package = "com.hedera.hashgraph.proto";
option java_multiple_files = true;

import "ResponseCode.proto";


/* When the client sends the node a transaction of any kind, the node replies with this, which simply says that the transaction passed the precheck (so the node will submit it to the network) or it failed (so it won't). If the fee offered was insufficient, this will also contain the amount of the required fee. To learn the consensus result, the client should later obtain a receipt (free), or can buy a more detailed record (not free). */
message TransactionResponse {
	ResponseCodeEnum nodeTransactionPrecheckCode = 1; // The response code that indicates the current status of the transaction.
	uint64 cost = 2; // If the response code was INSUFFICIENT_TX_FEE, the actual transaction fee that would be required to execute the transaction.
}
